#1058: fixed mvn encrypt password replaced new ProcessContext with runTool